# magnet_pose_estimation

./: .gitignore  CONVENTIONS.md  README.md
archive/mag_bringup/: CMakeLists.txt  README_full_system.md  package.xml
archive/mag_bringup/launch/: bringup.launch  test_system.launch
archive/mag_pose_estimation/: CMakeLists.txt
archive/mag_pose_estimation/include/mag_pose_estimation/: mag_field_calculator.hpp  mag_pose_estimator_base.hpp
archive/mag_pose_estimation/src/: mag_pose_estimator_kalman.cpp  mag_pose_estimator_node.cpp
archive/mag_sensor_node/: CMakeLists.txt  package.xml
archive/mag_sensor_node/launch/: mag_sensor_node.launch  mag_sensor_sim_node.launch
archive/mag_sensor_node/src/: array_description.cpp  mag_sensor_node.cpp
archive/magnet_motion/: package.xml
archive/magnet_motion/include/magnet_motion/: magnet_motion_node.hpp
archive/magnet_msgs/: CMakeLists.txt  package.xml
archive/magnet_msgs/msg/: MagSensorData.msg  MagnetPose.msg
src/01_core/mag_core_description/: CMakeLists.txt  README.md  package.xml
src/01_core/mag_core_description/config/: sensor_array.yaml
src/01_core/mag_core_description/src/: sensor_array_config_loader.cpp  sensor_array_description.cpp
src/01_core/mag_core_msgs/: CMakeLists.txt  README.md  package.xml
src/01_core/mag_core_msgs/action/: TrackMagnet.action
src/01_core/mag_core_msgs/msg/: MagSensorArray.msg  MagSensorBatch.msg  MagSensorData.msg  MagnetPose.msg
src/01_core/mag_core_utils/: CMakeLists.txt  README.md  package.xml
src/01_core/mag_core_utils/src/: param_reader.cpp  rosparam_shortcuts_extensions.cpp  xmlrpc_utils.cpp
src/01_core/mag_viz/: CMakeLists.txt  README.md  package.xml
src/01_core/mag_viz/config/: magnet_viz.yaml
src/01_core/mag_viz/launch/: magnet_viz.launch
src/01_core/mag_viz/src/: magnet_viz_node.cpp  sensor_array_viz_node.cpp
src/02_device/mag_device_arm/: CMakeLists.txt  README.md  package.xml
src/02_device/mag_device_arm/config/: dual_arm.yaml  single_arm.yaml  single_arm_tool.yaml
src/02_device/mag_device_arm/launch/: arm_ping_pong.launch  dual_arm.launch  dual_arm_bringup.launch  dual_arm_gazebo.launch  dual_arm_tool.launch  gazebo_moveit.launch  single_arm.launch  single_arm_bringup.launch  (+2 more)
src/mag_arm_scan/: CMakeLists.txt  README.md  package.xml
src/mag_arm_scan/config/: mag_arm_scan.rviz  raw_data_recorder.yaml  scan_config.yaml  scan_controller_node.yaml  scan_tool.yaml
src/mag_arm_scan/launch/: mag_arm_scan.launch  magnetic_sensor_bracket.launch  raw_data_recorder.launch
src/mag_arm_scan/meshes/: magnetic_sensor_bracket.SLDPRT  magnetic_sensor_bracket.STL
src/mag_arm_scan/rviz/: mag_arm_scan.rviz
src/mag_arm_scan/src/: raw_data_recorder_node.cpp  scan_controller_node.cpp  scan_controller_with_recorder_node.cpp  scan_orchestrator_node.cpp  tool_manager_node.cpp
src/mag_pose_estimation/: CMakeLists.txt  README.md  package.xml
src/mag_pose_estimation/config/: estimation_config.yaml  magnet_pose_estimator_node.yaml
src/mag_pose_estimation/launch/: mag_pose_estimation.launch
src/mag_pose_estimation/src/: mag_field_calculator.cpp  mag_pose_estimator_kalman.cpp  mag_pose_estimator_node.cpp  mag_pose_estimator_optimization.cpp
src/mag_pose_visualization/: CMakeLists.txt  package.xml  plugin_description.xml
src/mag_pose_visualization/config/: visualization_config.yaml
src/mag_pose_visualization/launch/: visualization.launch
src/mag_pose_visualization/src/: mag_field_panel.cpp  visualization_node.cpp
src/mag_sensor_node/: CMakeLists.txt  README.md  package.xml
src/mag_sensor_node/config/: array.yaml  hardware.yaml  mag_sensor_node.yaml  mag_sensor_sim_node.yaml  mag_sensor_world_sim_node.yaml  sensor_array.yaml  sensor_config.yaml  sensor_tf_publisher_node.yaml  sim_config.yaml  simulation.yaml
src/mag_sensor_node/launch/: mag_sensor_node.launch  mag_sensor_sim_node.launch  mag_sensor_world_sim_node.launch  sensor_tf_publisher.launch
src/mag_sensor_node/msg/: MagSensorData.msg  mag_sensor_data.msg
src/mag_sensor_node/src/: mag_sensor_node.cpp  mag_sensor_sim_node.cpp  mag_sensor_world_sim_node.cpp  sensor_config.cpp  sensor_tf_publisher_node.cpp
src/mag_tracking_control/: CMakeLists.txt  package.xml
src/mag_tracking_control/src/: main.cpp
src/mag_viz/: CMakeLists.txt  README.md  package.xml
src/mag_viz/config/: field_map_aggregator.yaml  field_map_csv_viz.yaml  mag_sensor_viz.rviz  mag_sensor_viz.yaml  mag_sensor_viz_node.yaml  magnet_viz.yaml  magnet_viz_node.yaml  rviz.rviz
src/mag_viz/launch/: field_map_offline.launch  field_map_online.launch  mag_sensor_viz.launch  mag_viz.launch  mag_viz_sensor.launch  magnet_viz.launch
src/mag_viz/rviz/: field_map_offline.rviz  mag_rviz.rviz  mag_sensor.rviz
src/mag_viz/src/: field_map_aggregator_node.cpp  field_map_csv_viz_node.cpp  mag_sensor_viz_node.cpp  magnet_viz_node.cpp
src/magnet_motion/: CMakeLists.txt
src/magnet_motion/config/: magnet_motion_node.yaml
src/magnet_motion/launch/: magnet_motion_node.launch
src/magnet_motion/src/: magnet_motion_node.cpp
src/magnetic_pose_estimation/: CMakeLists.txt  README.md  package.xml  plugin_description.xml
src/magnetic_pose_estimation/config/: estimation_config.yaml  estimatior_config.yaml  magnet_config.yaml  sensor_config.yaml  serial_config.yaml  simulation_config.yaml  visualization.rviz  visualization_config.yaml
src/magnetic_pose_estimation/launch/: magnet_pose_estimation.launch  sensor_reader.launch  simulation.launch  test_visualization.launch  visualization.launch
src/magnetic_pose_estimation/msg/: MagnetPose.msg  MagneticField.msg
src/magnetic_pose_estimation/src/: earth_field_processor_node.cpp  magnet_pose_estimator_kalman.cpp  magnet_pose_estimator_node.cpp  magnet_pose_estimator_optimization.cpp  magnetic_field_calculator.cpp  magnetic_field_panel.cpp  sensor_config.cpp  sensor_reader_node.cpp  simulation_node.cpp  visualization_node.cpp
src/magnetic_pose_estimation/test/: test_publisher_node.cpp
src/magnetic_pose_estimation/tool/: analyze_magnetic_field.py  magnetic_field_analysis_result.txt
(+323 files in other folders)
