<?xml version="1.0"?>
<package format="2">
  <name>mag_bringup</name>
  <version>0.1.0</version>
  <description>Bringup package to orchestrate magnetic sensor, visualization, estimation, and scanning nodes.</description>

  <maintainer email="lawkaho@todo.todo">lawkaho</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Runtime dependencies for included launches/nodes -->
  <exec_depend>roslaunch</exec_depend>
  <exec_depend>mag_sensor_node</exec_depend>
  <exec_depend>mag_viz</exec_depend>
  <exec_depend>mag_pose_estimation</exec_depend>
  <exec_depend>mag_arm_scan</exec_depend>
  <exec_depend>rviz</exec_depend>

  <export/>
</package>
