<?xml version="1.0"?>
<package format="2">
  <name>mag_sensor_node</name>
  <version>0.0.1</version>
  <description>Standalone magnetic sensor serial reader and ROS publisher</description>
  <maintainer email="lawkaho@todo.todo">lawkaho</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>magnet_msgs</build_depend>
  <build_depend>serial</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>magnet_msgs</exec_depend>
  <exec_depend>serial</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  

  <export/>
</package>
