<?xml version="1.0"?>
<package format="2">
  <name>mag_arm_scan</name>
  <version>0.0.1</version>
  <description>Robot arm scanning orchestrator for initial magnetic field mapping. Plans grid paths, publishes waypoints, and coordinates with mag_sensor_node.</description>

  <maintainer email="lawkaho@todo.todo">lawkaho</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <build_export_depend>tf2_geometry_msgs</build_export_depend>

  <exec_depend>tf2_geometry_msgs</exec_depend>
  <!-- Optional runtime dependency for sensor topics -->
  <exec_depend>mag_sensor_node</exec_depend>

  <export/>
</package>
