<?xml version="1.0"?>
<package format="2">
  <name>mag_pose_estimation</name>
  <version>0.0.1</version>
  <description>Magnetic pose estimation package</description>

  <maintainer email="lawkaho@todo.todo">lawkaho</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>mag_sensor_node</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>ceres-solver</build_depend>

  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>std_srvs</build_export_depend>
  <build_export_depend>tf2</build_export_depend>
  <build_export_depend>tf2_ros</build_export_depend>
  <build_export_depend>eigen</build_export_depend>
  <build_export_depend>ceres-solver</build_export_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>mag_sensor_node</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>eigen</exec_depend>
  <exec_depend>ceres-solver</exec_depend>
</package>
