<?xml version="1.0"?>
<package format="2">
  <name>mag_pose_visualization</name>
  <version>0.0.1</version>
  <description>RViz panel and visualization node for magnetic pose estimation</description>

  <maintainer email="maintainer@example.com">maintainer</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rviz</build_depend>
  <build_depend>qtbase5-dev</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>mag_sensor_node</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>mag_sensor_node</exec_depend>

  <export>
    <rviz plugin="plugin_description.xml" />
  </export>
</package>
