<?xml version="1.0"?>
<package format="2">
  <name>mag_tracking_control</name>
  <version>0.0.1</version>
  <description>Magnetic tracking control package for robotic arm coordination</description>
  <maintainer email="lawkaho@todo.todo">lawkaho</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>magnet_msgs</build_depend>
  <build_depend>moveit_msgs</build_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>magnet_msgs</exec_depend>
  <exec_depend>moveit_msgs</exec_depend>
  <exec_depend>actionlib</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <export/>
</package>