<?xml version="1.0"?>
<package format="2">
  <name>mag_viz</name>
  <version>0.1.0</version>
  <description>Lightweight magnetic field visualization utilities</description>

  <maintainer email="lawkaho@todo.todo">lawkaho</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>mag_sensor_node</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>mag_sensor_node</exec_depend>
  <exec_depend>rviz</exec_depend>

  <export/>
</package>
