<?xml version="1.0"?>
<package format="2">
    <name>magnetic_pose_estimation</name>
    <version>0.0.0</version>
    <description>The magnetic_pose_estimation package</description>

    <maintainer email="lawkaho@todo.todo">lawkaho</maintainer>

    <license>TODO</license>

    <!-- catkin 构建工具依赖 -->
    <buildtool_depend>catkin</buildtool_depend>

    <!-- 编译时依赖项 -->
    <build_depend>geometry_msgs</build_depend>  <!-- 几何消息类型 -->
    <build_depend>message_generation</build_depend>  <!-- ROS 消息生成 -->
    <build_depend>roscpp</build_depend>  <!-- ROS C++ 库 -->
    <build_depend>sensor_msgs</build_depend>  <!-- 传感器消息类型 -->
    <build_depend>std_msgs</build_depend>  <!-- 标准消息类型 -->
    <build_depend>tf2</build_depend>  <!-- TF2 坐标变换库 -->
    <build_depend>tf2_ros</build_depend>  <!-- TF2 ROS 接口 -->
    <build_depend>eigen</build_depend>  <!-- Eigen 矩阵运算库 -->
    <build_depend>serial</build_depend>  <!-- 串口通信库 -->
    <build_depend>rviz</build_depend>

    <!-- 导出依赖项（其他包构建时需要的依赖） -->
    <build_export_depend>geometry_msgs</build_export_depend>
    <build_export_depend>roscpp</build_export_depend>
    <build_export_depend>sensor_msgs</build_export_depend>
    <build_export_depend>std_msgs</build_export_depend>
    <build_export_depend>tf2</build_export_depend>
    <build_export_depend>tf2_ros</build_export_depend>
    <build_export_depend>eigen</build_export_depend>
    <build_export_depend>serial</build_export_depend>  <!-- 串口通信库 -->
    <build_export_depend>rviz</build_export_depend>

    <!-- 运行时依赖项 -->
    <exec_depend>geometry_msgs</exec_depend>
    <exec_depend>roscpp</exec_depend>
    <exec_depend>sensor_msgs</exec_depend>
    <exec_depend>std_msgs</exec_depend>
    <exec_depend>tf2</exec_depend>
    <exec_depend>tf2_ros</exec_depend>
    <exec_depend>eigen</exec_depend>
    <exec_depend>serial</exec_depend>  <!-- 串口通信库 -->
    <exec_depend>rviz</exec_depend>

    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <!-- Other tools can request additional information be placed here -->
        <rviz plugin="${prefix}/plugin_description.xml" />
    </export>

</package>
