<?xml version="1.0"?>
<package format="2">
  <name>mag_core_description</name>
  <version>0.0.0</version>
  <description>Common sensor array description and TF helpers for the magnetic tracking system.</description>
  <maintainer email="maintainer@example.com">TODO</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>mag_core_utils</build_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>tf2</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>
  <exec_depend>mag_core_utils</exec_depend>
  <export/>
</package>
