<?xml version="1.0"?>
<package format="2">
  <name>mag_core_msgs</name>
  <version>0.0.0</version>
  <description>Magnetic tracking system shared message and service definitions.</description>
  <maintainer email="maintainer@example.com">TODO</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <export/>
</package>
