<?xml version="1.0"?>
<package format="2">
  <name>mag_core_msgs</name>
  <version>0.0.0</version>
  <description>Magnetic tracking system shared message and service definitions.</description>
  <maintainer email="maintainer@example.com">TODO</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>actionlib_msgs</exec_depend>
  <export/>
</package>
